Add EFA support on AWS

--- a/roles/mpi/tasks/main.yml
+++ b/roles/mpi/tasks/main.yml
@@ -3,3 +3,7 @@
 - name: install packages
   package:
     name: "{{ mpi_packages[ansible_local.citc.csp] }}"
+
+- include_tasks: efa.yml
+  when:
+    ansible_local.citc.csp == "aws"
