--- a/roles/mpi/tasks/efa.yml
+++ b/roles/mpi/tasks/efa.yml
@@ -14,7 +14,7 @@
 # Unfortunately, EFA kernel modules aren't available for CentOS on ARM
 # Avoid installing the kernel modules there.
 - name: Run EFA installer
-  command: ./efa_installer.sh -y {{ "-k" if ansible_architecture == "aarch64" }}
+  command: ./efa_installer.sh -y {{ "-k" if ansible_architecture == "aarch64"  else "" }}
   args:
     chdir: /tmp/aws-efa-installer
 
