--- a/roles/spack_compute/tasks/main.yaml
+++ b/roles/spack_compute/tasks/main.yaml
@@ -11,7 +11,7 @@
 - name: Spack config externals (aws)
   command: /mnt/shared/spack/bin/spack external find --scope=system --not-buildable
   environment:
-    path: /opt/amazon/openmpi/bin:{{ ansible_env.PATH }}
+    PATH: "/opt/amazon/openmpi/bin:{{ ansible_env.PATH }}"
   when:
     ansible_local.citc.csp == "aws"
 
