--- a/roles/spack_compute/tasks/main.yaml
+++ b/roles/spack_compute/tasks/main.yaml
@@ -23,8 +23,9 @@
 
 - name: Add Spack to default shells
   copy:
-    src: 99-spack.sh
     dest: /etc/profile.d/99-spack.sh
+    content: |
+      . /mnt/shared/spack/share/spack/setup-env.sh
     owner: root
     mode: u=rwx,g=rx,o=rx
     force: no
