Simplify devtool install

--- a/roles/devtoolset/tasks/main.yml
+++ b/roles/devtoolset/tasks/main.yml
@@ -7,12 +7,7 @@
 
 - name: install gcc-toolset
   package:
-    name: gcc-toolset-9
-
-- name: install gfortran
-  package:
-    name: gcc-gfortran
-
-- name: install cmake
-  package:
-    name: cmake
+    name:
+      - gcc-toolset-9
+      - gcc-gfortran
+      - cmake
