--- a/roles/spack_compute/tasks/main.yaml
+++ b/roles/spack_compute/tasks/main.yaml
@@ -21,6 +21,20 @@
 - name: Spack mark cmake as buildable
   command: /mnt/shared/spack/bin/spack config --scope system add packages:cmake:buildable:true
 
+- name: Spack note SLURM existence - create
+  template:
+    src: external_slurm.yaml.j2
+    dest: /tmp/external_slurm.yaml
+
+- name: Spack note SLURM existence - import
+  command: /mnt/shared/spack/bin/spack config --scope system add -f /tmp/external_slurm.yaml
+
+- name: Spack note SLURM existence - delete
+  file:
+    path: /tmp/external_slurm.yaml
+    state: absent
+
+
 - name: Build GCC 10
   command: /mnt/shared/spack/bin/spack install gcc@10.2.0 +binutils arch={{ ansible_architecture }}
   become_user: citc
@@ -30,10 +44,19 @@
   register: spack_gcc10_dir
 
 - name: Register new GCC with Spack
-  command: /mnt/shared/spack/bin/spack compiler find {{ spack_gcc10_dir }}
+  command: /mnt/shared/spack/bin/spack compiler find --scope system {{ spack_gcc10_dir }}
 
 - name:  Default new GCC
   command: /mnt/shared/spack/bin/spack config --scope system add "packages:all:compiler:[gcc@10.2.0 arch={{ansible_architecture}}]"
+
+# Stuff for GCP - Build our own MPI (AWS uses EFA)
+- name: Build OpenMPI (GCP)
+  command: /mnt/shared/spack/bin/spack install openmpi +pmi schedulers=slurm +legacylaunchers fabrics=auto arch={{ansible_architecture}}
+  become_user: citc
+  when:
+    ansible_local.citc.csp == "google"
+
+
 
 - name: Add Spack to default shells
   copy:
