--- a/roles/spack_compute/tasks/main.yaml
+++ b/roles/spack_compute/tasks/main.yaml
@@ -1,7 +1,10 @@
 ---
+# Disabling system compiler - we'll only install GCC 9 into spack for now
+#- name: Spack config compiler
+#  command: /mnt/shared/spack/bin/spack compiler find --scope=system
 
 - name: Spack config compiler
-  command: /mnt/shared/spack/bin/spack compiler find --scope=system
+  command: /mnt/shared/spack/bin/spack compiler find --scope=system /opt/rh/gcc-toolset-9/root
 
 - name: Spack config externals
   command: /mnt/shared/spack/bin/spack external find --scope=system --not-buildable
@@ -33,28 +36,28 @@
     state: absent
 
 
-# Temporarily enable GCC as "buildable"
+# Enable GCC as "buildable"
 - name: Spack mark GCC as buildable
   command: /mnt/shared/spack/bin/spack config add packages:gcc:buildable:true
   become_user: citc
 
-- name: Build GCC 10
-  command: /mnt/shared/spack/bin/spack install gcc@10.2.0 +binutils arch={{ ansible_architecture }}
-  become_user: citc
-
-- name: Find GCC 10
-  command: /mnt/shared/spack/bin/spack location -i gcc@10.2.0 arch={{ ansible_architecture }}
-  register: spack_gcc10_dir
-
-- name: Register new GCC with Spack
-  command: /mnt/shared/spack/bin/spack compiler find --scope system {{ spack_gcc10_dir.stdout }}
-
-- name:  Default new GCC
-  command: /mnt/shared/spack/bin/spack config --scope system add "packages:all:compiler:[gcc@10.2.0 arch={{ansible_architecture}}]"
-
-- name: Spack remove mark GCC as buildable
-  command: /mnt/shared/spack/bin/spack config remove packages:gcc:buildable:true
-  become_user: citc
+#- name: Build GCC 10
+#  command: /mnt/shared/spack/bin/spack install gcc@10.2.0 +binutils arch={{ ansible_architecture }}
+#  become_user: citc
+#
+#- name: Find GCC 10
+#  command: /mnt/shared/spack/bin/spack location -i gcc@10.2.0 arch={{ ansible_architecture }}
+#  register: spack_gcc10_dir
+#
+#- name: Register new GCC with Spack
+#  command: /mnt/shared/spack/bin/spack compiler find --scope system {{ spack_gcc10_dir.stdout }}
+#
+#- name:  Default new GCC
+#  command: /mnt/shared/spack/bin/spack config --scope system add "packages:all:compiler:[gcc@10.2.0 arch={{ansible_architecture}}]"
+#
+#- name: Spack remove mark GCC as buildable
+#  command: /mnt/shared/spack/bin/spack config remove packages:gcc:buildable:true
+#  become_user: citc
 #
 # Stuff for GCP - Build our own MPI (AWS uses EFA-provided OpenMPI)
 - name: Build OpenMPI (GCP)
@@ -64,13 +67,13 @@
     ansible_local.citc.csp == "google"
 
 - name: Find OpenMPI location
-  command: /mnt/shared/spack/bin/spack location -i openmpi%gcc@10.2.0 arch={{ ansible_architecture }}
+  command: /mnt/shared/spack/bin/spack location -i openmpi arch={{ ansible_architecture }}
   register: spack_ompi_dir
   when:
     ansible_local.citc.csp == "google"
 
 - name: Find OpenMPI spec
-  command: /mnt/shared/spack/bin/spack find --format="{name}@{version}%{compiler.name}@{compiler.version} arch={arch.target}" openmpi%gcc@10.2.0 arch={{ ansible_architecture }}
+  command: /mnt/shared/spack/bin/spack find --format="{name}@{version}%{compiler.name}@{compiler.version} arch={arch.target}" openmpi arch={{ ansible_architecture }}
   register: spack_ompi_spec
   when:
     ansible_local.citc.csp == "google"
@@ -109,6 +112,7 @@
   copy:
     dest: /etc/profile.d/99-spack.sh
     content: |
+      . /opt/rh/gcc-toolset-9/enable
       . /mnt/shared/spack/share/spack/setup-env.sh
     owner: root
     mode: u=rwx,g=rx,o=rx
