--- a/roles/spack/tasks/main.yaml
+++ b/roles/spack/tasks/main.yaml
@@ -16,6 +16,16 @@
     depth: 1
   become_user: citc
 
+- name: Apply Spack configurations
+  copy:
+    dest: /mnt/shared/spack/etc/spack/config.yaml
+    content: |
+      config:
+        db_lock_timeout: 30
+    mode: 0644
+    owner: citc
+    group: citc
+
 - name: Init Spack DB
   command: /mnt/shared/spack/bin/spack reindex
   become_user: citc
