--- a/management.yml
+++ b/management.yml
@@ -82,4 +82,4 @@
       dest: /mnt/shared/update_service_db
       mode: 0755
   - name: Inform Service Node
-    command: /mnt/shared/update_service_db clusters --status r
+    command: /mnt/shared/update_service_db cluster --status r
