--- a/roles/spack_compute/tasks/main.yaml
+++ b/roles/spack_compute/tasks/main.yaml
@@ -65,61 +65,11 @@
   command: /mnt/shared/spack/bin/spack config add packages:gcc:buildable:true
   become_user: citc
 
-#- name: Build GCC 10
-#  command: /mnt/shared/spack/bin/spack install gcc@10.2.0 +binutils arch={{ ansible_architecture }}
-#  become_user: citc
-#
-#- name: Find GCC 10
-#  command: /mnt/shared/spack/bin/spack location -i gcc@10.2.0 arch={{ ansible_architecture }}
-#  register: spack_gcc10_dir
-#
-#- name: Register new GCC with Spack
-#  command: /mnt/shared/spack/bin/spack compiler find --scope system {{ spack_gcc10_dir.stdout }}
-#
-#- name:  Default new GCC
-#  command: /mnt/shared/spack/bin/spack config --scope system add "packages:all:compiler:[gcc@10.2.0 arch={{ansible_architecture}}]"
-#
-#- name: Spack remove mark GCC as buildable
-#  command: /mnt/shared/spack/bin/spack config remove packages:gcc:buildable:true
-#  become_user: citc
-#
+- name: Set OpenMPI default options
+  command: /mnt/shared/spack/bin/spack config --scope system add packages:openmpi:variants:'+pmi +legacylaunchers schedulers=slurm fabrics={{"ofi" if ansible_local.citc.csp == "aws" else "auto"}}'
 
-# Build our own MPI (AWS uses EFA-provided libfabric)
-
-
-- name: Build OpenMPI (GCP)
-  command: /mnt/shared/spack/bin/spack install openmpi +pmi schedulers=slurm +legacylaunchers fabrics={{"ofi" if ansible_local.citc.csp == "aws" else "auto"}} arch={{ansible_architecture}}
-  become_user: citc
-
-- name: Find OpenMPI location
-  command: /mnt/shared/spack/bin/spack location -i openmpi arch={{ ansible_architecture }}
-  register: spack_ompi_dir
-
-- name: Find OpenMPI spec
-  command: /mnt/shared/spack/bin/spack find --format="{name}@{version}%{compiler.name}@{compiler.version} arch={arch.target}" openmpi arch={{ ansible_architecture }}
-  register: spack_ompi_spec
-
-
-- name: Register OpenMPI with Spack
-  copy:
-    content: |
-      packages:
-        mpi:
-          buildable: false
-        openmpi:
-          externals:
-          - spec: {{spack_ompi_spec.stdout}}
-            prefix: {{spack_ompi_dir.stdout}}
-          buildable: false
-    dest: /tmp/ompi.yaml
- 
-- name: Spack note OpenMPI - import
-  command: /mnt/shared/spack/bin/spack config --scope system add -f /tmp/ompi.yaml
-
-- name: Spack note OpenMPI - delete
-  file:
-    path: /tmp/ompi.yaml
-    state: absent
+- name: Set MPICH default options
+  command: /mnt/shared/spack/bin/spack config --scope system add packages:mpich:variants:'+slurm netmod={{"ofi" if ansible_local.citc.csp == "aws" else "tcp"}}'
 
 
 
