Invoke cluster sync during ansible wrapup

--- a/management.yml
+++ b/management.yml
@@ -111,5 +111,7 @@
         - google-cloud-storage
         - boto3
       virtualenv:  /opt/cloud_sdk
+  - name: Sync Cluster with DB
+    command: /mnt/shared/sbin/run_command sync
   - name: Inform Service Node
     command: /mnt/shared/bin/update_service_db cluster --status r
