--- a/management.yml
+++ b/management.yml
@@ -110,6 +110,7 @@
         - google-api-python-client
         - google-cloud-storage
         - boto3
+        - pexpect
       virtualenv:  /opt/cloud_sdk
   - name: Sync Cluster with DB
     command: /mnt/shared/sbin/run_command sync
