Take 1 at GVNIC image

--- a/roles/packer/tasks/main.yml
+++ b/roles/packer/tasks/main.yml
@@ -39,6 +39,20 @@
     owner: root
     mode: u=rwx,g=,o=
 
+- name: copy in packer kernel-update
+  file:
+    src: update_kernel.sh
+    dest: /etc/citc/packer/update_kernel.sh
+    owner: root
+    mode: u=rwx,g=,o=
+
+- name: copy in packer gvnic builder
+  file:
+    src: update_kernel.sh
+    dest: /etc/citc/packer/install_gvnic.sh
+    owner: root
+    mode: u=rwx,g=,o=
+
 - name: copy in packer extra run script template (no force overwrite)
   copy:
     src: compute_image_extra.sh
