--- a/roles/slurm/tasks/main.yml
+++ b/roles/slurm/tasks/main.yml
@@ -78,11 +78,13 @@
 
 - name: install Slurm
   yum:
+    enablerepo: powertools
     name: slurm
     state: present
 
 - name: install Slurm-parts
   yum:
+    enablerepo: powertools
     name: slurm-{{ item }}-{{ slurm_version }}*
     state: present
   loop: "{{ slurm_packages }}"
